# tatamishot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-test.yml  conventional-commits.yml  lint.yml  poetry-lock-diff.yml  version-bump.yml
tatamishot/: auth.py  config.py  ffmpeg.py  log.py  main.py  models.py  plex.py  routes.py
tatamishot/static/: index.html
test-results/pytest/: results.xml
tests/tatamishot/: test_ffmpeg.py  test_log.py  test_main.py  test_plex.py  test_routes.py
